# mercado-livre-affiliates

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/mercado_livre_affiliates/: __about__.py  __init__.py  _client.py  _utils.py  core.py  errors.py  events.py  exceptions.py  imap.py  utils.py
src/mercado_livre_affiliates/_client/: __init__.py  client.py  session.py
src/mercado_livre_affiliates/_impl/: __init__.py  core.py  errors.py  exceptions.py  imap.py  utils.py
src/mercado_livre_affiliates/_impl/core/: __init__.py  client.py  session.py
src/mercado_livre_affiliates/_impl/exceptions/: __init__.py  mercado_livre_affiliates.py
src/mercado_livre_affiliates/_impl/services/: __init__.py
src/mercado_livre_affiliates/_impl/services/gmail/: __init__.py  client.py
src/mercado_livre_affiliates/_models/: __init__.py  base.py  events.py  price.py
src/mercado_livre_affiliates/_services/: gmail.py
src/mercado_livre_affiliates/_utils/: events.py
src/mercado_livre_affiliates/enums/: __init__.py  _offer_category.py
src/mercado_livre_affiliates/enums/_offer_categories/: __init__.py  agribusiness.py  antiques_and_collectibles.py  art_supplies_stationery_and_haberdashery.py  babies.py  base.py  beauty_and_personal_care.py  books_magazines_and_comics.py  cameras_and_accessories.py  cell_phones_and_telephones.py  commom.py  common.py  computing.py  construction.py  electronics_audio_and_video.py  food_and_beverage.py  footwear_clothing_and_bags.py  games.py  health.py  home_appliances.py  home_furniture_and_decor.py  industry_and_commerce.py  jewelryand_watches.py  more_categories.py  musical_instruments.py  parties_and_party_favors.py  pet_shop.py  sports_and_fitness.py  tools.py  toys_and_hobbies.py  vehicle_accessories.py
src/mercado_livre_affiliates/events/: __init__.py  events.py  responses.py
tests/: background_session.py  events.py  gmail.py  main_test.py  test_main.py
