[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mercado-livre-affiliates"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabio Antonio Astore", email = "astore.a.fabio@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/mercado-livre-affiliates#readme"
Issues = "https://github.com/U.N. Owen/mercado-livre-affiliates/issues"
Source = "https://github.com/U.N. Owen/mercado-livre-affiliates"

[tool.hatch.version]
path = "src/mercado_livre_affiliates/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mercado_livre_affiliates tests}"

[tool.coverage.run]
source_pkgs = ["mercado_livre_affiliates", "tests"]
branch = true
parallel = true
omit = [
  "src/mercado_livre_affiliates/__about__.py",
]

[tool.coverage.paths]
mercado_livre_affiliates = ["src/mercado_livre_affiliates", "*/mercado-livre-affiliates/src/mercado_livre_affiliates"]
tests = ["tests", "*/mercado-livre-affiliates/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
only-packages = true
packages = [
  "src/mercado_livre_affiliates"
]

[tool.hatch.build.targets.wheel]
only-packages = true
packages = [
  "src/mercado_livre_affiliates"
]
